# Spell

./: .codex.yaml  .env.backup  .env.example  .gitignore  AGENTS.md  API.md  AUDIT_LOGGING_IMPLEMENTATION.md  AUTHENTICATION.md  CHAT_IMPLEMENTATION_SUMMARY.md  CHAT_INTEGRATION_GUIDE.md  CLOUDFLARE_R2_SETUP.md  DEPLOYMENT_CHECKLIST.md  KAMUI-4D.md  LICENSE  MIGRATION-SPELL.md  Makefile  PASSKEY_ARCHITECTURE.md  PASSKEY_IMPLEMENTATION.md  PASSKEY_QUICK_START.md  PLANS.md  PROGRESS.md  QUICKSTART.md  R2_DEPLOYMENT_CHECKLIST.md  R2_INTEGRATION_SUMMARY.md  README.md  REAL_TIME_UPDATES_IMPLEMENTATION.md  SETUP.md  Spec.md  auth.ts  eslint.config.js  jest.config.js  jest.setup.js  kamui-4d-start.sh  middleware.ts  next.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup-env.sh  (+1 more)
.artifacts/: README.md  setup-instructions.md  summary.md
.kamui/: model-versions-cache.json  system-graph-state.json  tasks-state.json
app/: .env.local.example  globals.css  layout.tsx  page.tsx
cli/: spell.ts
components/: app-store-tab-bar.tsx  artifacts-view.tsx  bazaar-marketplace.tsx  billing-view.tsx  chat-input.tsx  chat-interface.tsx  chat-messages.tsx  chat-sidebar.tsx  home-page.tsx  identity-view.tsx  language-selection.tsx  licenses-view.tsx  loading-skeleton.tsx  passkey-auth.tsx  settings-view.tsx  spell-cast-panel.tsx  spell-execution-dialog.tsx  spell-sidebar.tsx  splash-screen.tsx  transactions-view.tsx
core/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  fly.toml  sandbox-runner.mjs  service-runner.mjs
core/src/: auth.rs  billing.rs  main.rs  models.rs  routes.rs  storage.rs  wasm.rs
core/tests/: service-runner.test.ts
db/: README.md  schema.sql
docs/: API.md  API_CLI_APPS_SDK_SPEC.md  ARCHITECTURE.md  AUTH_ACCOUNT_BAN_SPEC.md  BUDGET_CAP_SYSTEM.md  BUDGET_IMPLEMENTATION_SUMMARY.md  GETTING_STARTED.md  GITHUB_ACTIONS_SETUP.md  GITHUB_INTEGRATION_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  PRODUCT_UX_SPEC.md  RATE_LIMITING.md  RATE_LIMITING_IMPLEMENTATION.md  RATE_LIMITING_QUICKSTART.md  REAL_TIME_CAST_UPDATES.md  REAL_TIME_UPDATES_QUICK_START.md  ROADMAP.md  SPEC-Implementation.md  SPEC-Platform.md  SYSTEM_ARCHITECTURE_SPEC.md  WASM_IMPLEMENTATION_SUMMARY.md  WASM_RUNTIME.md  WEBHOOK_SECURITY.md  rate-limit-examples.ts  service-runner.md  spell-publish-workflow.yml
edge/: .env.example  README.md  r2-cors.json  secrets.env.example  wrangler.toml
hooks/: use-cast-runner.ts
lib/: api.ts  auth-shared.ts  auth.ts  cast-events.ts  http.ts  session.ts  spell-engine.ts  spell-store.ts  stripe-webhook.ts  stripe.ts  types.ts  utils.ts
ops/: atlas-tasks.md  run.json  runbook.sh
prisma/: schema.prisma  seed.ts
public/: manifest.json  robots.txt
scripts/: env-sync.mjs  env-sync.sh  migrate-artifacts-to-r2.ts  wrangler-secrets.sh
src/: middleware.ts
(+308 files in other folders)
