[package]
name = "spell-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WASM Runtime
wasmtime = { version = "21", features = ["component-model"] }
wasmtime-wasi = "21"

# Auth
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
jsonwebtoken = "9"
bcrypt = "0.15"

# HTTP Client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
url = "2"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rand = "0.8"
anyhow = "1"
thiserror = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Storage
aws-sdk-s3 = "1"
aws-config = "1"

# Payments
async-stripe = { version = "0.36", features = ["runtime-tokio-hyper-rustls"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true